# integrate-baumer-cam

./: .env.example  .gitignore  README.md  config.json  main.py  pyproject.toml  source_base.py  source_baumer.py  source_rtsp.py
